版本备份/V1.8.0/设定文档/故事线追踪/更新日志.md
# 更新日志 — 故事线追踪

> 本文件记录每次 S06 更新的简要摘要。

---

## 更新记录

| 日期 | 章节 | 更新内容 | 操作人 |
|:---|:---|:---|:---|
| 初始化 | 第0章 | 创建伏笔清单、人物弧光、时间线、关系网络四个追踪文件 | 系统初始化 |
| 第1章后 | 第1章 | F-001/002/003埋设；常阳弧光推进；时间线锚点更新 | S06自动 |
| 第2章后 | 第2章 | F-003强化、F-004埋设；常阳拍板迎战弧光推进；大壮破冰1/3；时间线至第2天；常阳↔大壮关系破冰 | S06自动 |
| 第3章后 | 第3章 | F-003再强化（神树林窑址）、F-005埋设（尤里卡）；阿陶首登并触发尤里卡；常阳科技树/驯马布局；时间线至第6天 | S06自动 |
| 第4章后 | 第4章 | F-004实证强化（陶片）、声望系统首现；大壮战将坐实2/3；常阳权威转向实绩；时间线至第7天（胜仗当日） | S06自动 |
| 第5章后 | 第5章 | F-003推行动（神树林远征决策）；声望影响邻近部落态度首现；远方信使钩子续接；正式定名「华夏」；时间线至第10天 | S06自动 |
| 第6章后 | 第6章 | 农业/可耕地首现；开垦农田+灌溉雏形；粮食危机缓解（半）；神树林远征延后至农事稳；时间线至第15天 | S06自动 |
| 第7章后 | 第7章 | 人口47→80（石部落老姜率30余口来投）；芽芽（六岁孤女）登场补人味；野豆发芽（芽芽守苗）；金句机制试水（2句入库）；老姜带来"骑马黑影往东"情报续接远方信使；时间线至第20天 | S06自动 |
| 第8章后 | 第8章 | 石器→骨器→复合工具；阿陶收石部落学徒、技术线进阶；生产力+18%、粮食9→14天；F-005尤里卡实证强化（工具制造加速）；神树林远征重启信号；金句机制落地（本章3句入库）；时间线至第25天 | S06自动 |
| 第9章后 | 第9章 | 第一次内部分歧（保守派vs改革派技术路线）；河西塌方绞盘/起重救人(芽芽)，分歧化解、保守派转化；尤里卡·工程学+15%、声望+3；时间线至第28天 | S06自动 |
| 第10章后 | 第10章 | 轮子/木轮车（运输革命·生产力+25%）；小部落(梧)30余口臣服，人口→112；声望+8；邻界转"探路"；时代远古→古典临界；金句3句入库；时间线至第32天 | S06自动 |
| 第11章后 | 第11章 | 选址之争：神树林勘探发现铜矿苗+前人窑（弯钩族记）；F-003/F-004再强化；冶炼前置解锁；城址定神树林+河谷农区；金句3句入库；时间线至第35天 | S06自动 |
| 语体框架 | 全书 | 风格指南六·九新增「语体分层与时代演进」：双层语体（族人上古口语·常阳独白modern）+时代演进轴+替换表+序章例外；清理 Ch4/10/11 族人语境现代口语（玩意儿/家伙/根本），常阳独白保留；Ch1序章按设计保留现代语体 | 本期 |

---

*最后更新：语体框架（六·九）建立 + Ch4/10/11 沉浸感清理*
